--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -10,9 +10,12 @@
         android:id="@+id/issuer"
         android:layout_width="500dp"
         android:layout_height="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-medium"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
