--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,8 +43,7 @@
         android:layout_marginVertical="12dp"/>
   </LinearLayout>
 
-
-  <LinearLayout
+  <androidx.coordinatorlayout.widget.CoordinatorLayout
       android:id="@+id/accountsView"
       android:orientation="vertical"
       android:gravity="center"
@@ -71,7 +70,6 @@
         android:id="@+id/include"
         layout="@layout/content_main"
         android:layout_width="match_parent"
-        android:layout_height="555dp"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="center"
         android:layout_gravity="top|center_horizontal"/>
@@ -83,7 +81,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_camera" />
-  </LinearLayout>
+  </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </LinearLayout>
